--- a/Soft1.html
+++ b/Soft1.html
@@ -80,7 +80,10 @@
             align-items: center;
             gap: 10px;
         }
-
+        a{
+            text-decoration: none;
+            color: #FFFFFF;
+        }
         .header h1 i {
             animation: pulse 2s infinite;
         }
@@ -424,7 +427,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-database"></i> Data Entry Software</h1>
+            <h1><i class="fas fa-database"></i><a href="soft1.html"> Data Entry Software</a></h1>
             <div class="user-menu">
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
