--- a/Soft1.html
+++ b/Soft1.html
@@ -427,7 +427,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-database"></i><a href="soft1.html"> Data Entry Software</a></h1>
+            <h1><i class="fas fa-database"></i><a href="index.html"> Data Entry Software</a></h1>
             <div class="user-menu">
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-moon"></i>
