--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- SheetJS for Excel Export -->
     <script type="text/javascript" src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-    
+        <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#4361ee">
     <style>
         /* --- Glassmorphism Style --- */
         body {
