--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <h1><a href="soft1.html">Data Entry Software</a></h1>
     
     <div class="form-container">
-        <h2>Add / Edit Data</h2>
+        <h2>Add / Edit Data</h2><a href="bills.html">Billings</a>
         <input type="hidden" id="recordId" value="">
         <input type="text" id="name" placeholder="Name" required>
         <input type="text" id="mobile" placeholder="Mobile" required>
