--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <body>
     
     <h1><a href="soft1.html">Data Entry Software</a></h1>
-    <h1><a href="tnm.html">Billings<i class="fa fa-arrow-right"></i>
+    <h1><a href="tmn.html">Billings<i class="fa fa-arrow-right"></i>
 </a></h1>
     <div class="form-container">
         <h2>Add / Edit Data</h2>
